--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
 :root {
   --ss-primary-color: #5897fb;
   --ss-bg-color: #ffffff;
@@ -2961,6 +2965,8 @@ p a:hover {
   line-height: 140%;
   color: #eaeaea;
   cursor: pointer;
+  width: 100%;
+  height: 100%;
   transition: 0.3s;
 }
 .tabs-pills__btn.active {
