--- a/src/index.css
+++ b/src/index.css
@@ -1251,8 +1251,8 @@ body {
   font-weight: 400;
   font-size: 22px;
   line-height: 140%;
-  color: #fff;
-  background-color: #171717;
+  color: #171717;
+  background-color: #fff;
 }
 @media (max-width: 768px) {
   body {
@@ -1468,7 +1468,7 @@ main {
   font-weight: 400;
   font-size: 58px;
   line-height: 120%;
-  color: #fff;
+  color: #171717;
 }
 @media (max-width: 768px) {
   .title {
@@ -2879,7 +2879,8 @@ p a:hover {
 .reminder {
   display: inline-block;
   gap: 5px;
-  background-color: #212121;
+  background-color: #ad8865;
+  color: white;
   box-shadow: 0 4px 40px #ffffff0a;
   border-radius: 10px;
   padding: 15px;
@@ -4232,6 +4233,9 @@ input[type*='radio'] {
 .contacts-block__desc {
   font-size: 20px;
   line-height: 140%;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
 }
 .contacts-section {
   margin-top: 220px;
@@ -4306,7 +4310,8 @@ input[type*='radio'] {
   width: 100%;
   left: 0;
   right: 0;
-  background-color: #212121;
+  background-color: #ad8865;
+  color: white;
   border-radius: 0 0 30px 30px;
   z-index: 10;
 }
@@ -4653,7 +4658,7 @@ input[type*='radio'] {
   flex: 0 0 20px;
 }
 .banner {
-  padding: 250px 0 230px;
+  padding: 250px 0 10px;
   position: relative;
   display: flex;
 }
@@ -4664,7 +4669,7 @@ input[type*='radio'] {
 }
 @media (max-width: 768px) {
   .banner {
-    padding: 125px 0 160px;
+    padding: 125px 0 10px;
   }
 }
 .banner__container {
@@ -5579,7 +5584,7 @@ input[type*='radio'] {
   }
 }
 .footer {
-  background-color: #212121;
+  background-color: #ad8865;
   border-radius: 60px 60px 0 0;
   color: #fff;
   overflow: hidden;
@@ -5882,7 +5887,7 @@ input[type*='radio'] {
   bottom: 0;
   width: 300%;
   height: 100%;
-  background-color: rgba(173, 136, 101,.5);
+  background-color: rgba(173, 136, 101, 0.5);
   border-radius: 0 150px 150px 0;
 }
 .records__title .title {
@@ -9666,7 +9671,6 @@ input[type*='radio'] {
   font-weight: 400 !important;
 }
 
-
-#about-us-link:hover{
-  color:#8f5633!important;
+#about-us-link:hover {
+  color: #8f5633 !important;
 }
