--- a/src/index.css
+++ b/src/index.css
@@ -4399,7 +4399,7 @@ input[type*='radio'] {
   bottom: 0;
   max-width: 50%;
   width: 100%;
-  background-color: #212121;
+  background-color: #ad8865;
   padding: 60px 0 10px;
   z-index: 10;
   display: none;
